--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,19 @@ android:id="@+id/menu_drawer">
 
     <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+        <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:minHeight="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                android:elevation="4dp"
+                android:fitsSystemWindows="true"
+        />
+
         <Button
                 android:text="Logout"
                 android:layout_width="wrap_content"
@@ -23,6 +35,7 @@ android:id="@+id/menu_drawer">
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:menu="@menu/nav_menu"
+            android:id="@+id/navigation_view"
             android:layout_gravity="start"
 
     >
